[package]

name = "thrift_for_rust_tests"
version = "0.0.1"
authors = ["Simon Génier <s@simon.coffee>", "Maxim Golov <maxim.golov@gmail.com>"]
build = "build.rs"

[[bin]]
name = "test_client"
path = "src/test_client.rs"

[dependencies.thrift]
path = "../../lib/rs"

[dependencies]
lazy_static = "0.2"
bufstream = "0.1"
getopts = "0.2"